data/issues_nolabel/nolabel_test_16063.txt
`tools/ci_builds/pi/build_raspberry_pi.sh`: '__PTHREAD_SPINS' was not declared in this scope

Hi,
I'm trying to build TensorFlow for RasperryPi from my computer (Ubuntu 16:04)
When I'm running tensorflow/tools/ci_builds/pi/build_raspberry_pi.sh
from the docker container build from tensorflow/tools/ci_builds/Dockerfile.pi-python3, some compilation commands from bazel build failed !
My goal is to use TensorFlow on my RaspberryPi (with a PiCamera) with the C++ API (compiled with bazel ? or makefile ?) ! I started to run some code on my RPi, but the compilation step is so long (6hours to compile/install TensorFlow from sources with Bazel !). I would like to save time, by compiling my code on my laptop, then sending it to the RPi for execution !
Here my commands :
# get tensorflow 1.5
git clone ......
cd tensorflow 
git checkout r1.5
cd tensorflow/tools/ci_build

# this docker file was added with `r1.5`!
docker build -t tf_ci_buid/pi-py3 -f Dockerfile.pi-python3 .
cd ../../../

# run the docker image
docker run -it -v "$PWD":/workspace -w /workspace tf_ci_buid/pi-py3:latest

# then, from the docker container, run the *.sh code 
# this script contains the `bazel build` command ! 
root@88db37534dff:/workspace# ./tensorflow/tools/ci_build/pi/build_raspberry_pi.sh 
But during the execution of bazel build, the compilation of code from external/highwayhash/highwayhash seems to fail ... (see error message bellow)
Someone has already encountered this issue ? Or it's due to the new version (r1.5) ?
Error message :
ERROR: /root/.cache/bazel/_bazel_root/eab0d61a99b6696edb3d2aff87b585e8/external/highwayhash/BUILD:8:1: C++ compilation of rule '@highwayhash//:sip_hash' failed (Exit 1): arm-linux-gnueabihf-gcc failed: error executing command 
  (cd /root/.cache/bazel/_bazel_root/eab0d61a99b6696edb3d2aff87b585e8/execroot/org_tensorflow && \
  exec env - \
    PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin \
    PWD=/proc/self/cwd \
    PYTHON_BIN_PATH=/usr/bin/python \
    PYTHON_LIB_PATH=/usr/local/lib/python2.7/dist-packages \
    TF_NEED_CUDA=0 \
    TF_NEED_OPENCL_SYCL=0 \
  /root/.cache/bazel/_bazel_root/eab0d61a99b6696edb3d2aff87b585e8/external/arm_compiler/bin/arm-linux-gnueabihf-gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -DRASPBERRY_PI -g0 -O2 -DNDEBUG -ffunction-sections -fdata-sections -DGEMMLOWP_ALLOW_SLOW_SCALAR_FALLBACK '-march=armv7-a' '-mfpu=neon-vfpv4' '-std=gnu11' '-DS_IREAD=S_IRUSR' '-DS_IWRITE=S_IWUSR' -O3 -U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_1 -U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_2 -U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_8 -funsafe-math-optimizations -ftree-vectorize -fomit-frame-pointer '-std=c++11' -isystem /usr/include/arm-linux-gnueabihf -isystem /usr/include/python2.7 -isystem /usr/include/ -MD -MF bazel-out/armeabi-opt/bin/external/highwayhash/_objs/sip_hash/external/highwayhash/highwayhash/sip_hash.d '-frandom-seed=bazel-out/armeabi-opt/bin/external/highwayhash/_objs/sip_hash/external/highwayhash/highwayhash/sip_hash.o' -iquote external/highwayhash -iquote bazel-out/armeabi-opt/genfiles/external/highwayhash -iquote external/bazel_tools -iquote bazel-out/armeabi-opt/genfiles/external/bazel_tools -isystem external/bazel_tools/tools/cpp/gcc3 -Wno-builtin-macro-redefined '-D__DATE__="redacted"' '-D__TIMESTAMP__="redacted"' '-D__TIME__="redacted"' -no-canonical-prefixes -fno-canonical-system-headers -c external/highwayhash/highwayhash/sip_hash.cc -o bazel-out/armeabi-opt/bin/external/highwayhash/_objs/sip_hash/external/highwayhash/highwayhash/sip_hash.o)
cc1plus: warning: command line option '-std=gnu11' is valid for C/ObjC but not for C++
In file included from /root/.cache/bazel/_bazel_root/eab0d61a99b6696edb3d2aff87b585e8/external/arm_compiler/bin/../lib/gcc/arm-linux-gnueabihf/4.9.3/../../../../arm-linux-gnueabihf/include/c++/4.9.3/arm-linux-gnueabihf/bits/gthr-default.h:35:0,
                 from /root/.cache/bazel/_bazel_root/eab0d61a99b6696edb3d2aff87b585e8/external/arm_compiler/bin/../lib/gcc/arm-linux-gnueabihf/4.9.3/../../../../arm-linux-gnueabihf/include/c++/4.9.3/arm-linux-gnueabihf/bits/gthr.h:148,
                 from /root/.cache/bazel/_bazel_root/eab0d61a99b6696edb3d2aff87b585e8/external/arm_compiler/bin/../lib/gcc/arm-linux-gnueabihf/4.9.3/../../../../arm-linux-gnueabihf/include/c++/4.9.3/ext/atomicity.h:35,
                 from /root/.cache/bazel/_bazel_root/eab0d61a99b6696edb3d2aff87b585e8/external/arm_compiler/bin/../lib/gcc/arm-linux-gnueabihf/4.9.3/../../../../arm-linux-gnueabihf/include/c++/4.9.3/memory:73,
                 from external/highwayhash/highwayhash/state_helpers.h:23,
                 from external/highwayhash/highwayhash/sip_hash.h:25,
                 from external/highwayhash/highwayhash/sip_hash.cc:15:
/root/.cache/bazel/_bazel_root/eab0d61a99b6696edb3d2aff87b585e8/external/arm_compiler/bin/../lib/gcc/arm-linux-gnueabihf/4.9.3/../../../../arm-linux-gnueabihf/include/c++/4.9.3/ext/concurrence.h:122:34: error: '__PTHREAD_SPINS' was not declared in this scope
     __gthread_mutex_t _M_mutex = __GTHREAD_MUTEX_INIT;
                                  ^
/root/.cache/bazel/_bazel_root/eab0d61a99b6696edb3d2aff87b585e8/external/arm_compiler/bin/../lib/gcc/arm-linux-gnueabihf/4.9.3/../../../../arm-linux-gnueabihf/include/c++/4.9.3/ext/concurrence.h:177:44: error: '__PTHREAD_SPINS' was not declared in this scope
     __gthread_recursive_mutex_t _M_mutex = __GTHREAD_RECURSIVE_MUTEX_INIT;
                                            ^
INFO: Elapsed time: 275.112s, Critical Path: 9.55s
FAILED: Build did NOT complete successfully